# hydra

./: .editorconfig  .gitignore  .perlcriticrc  .perltidyrc  .replit  .rustfmt.toml  .taplo.toml  .yath.rc  CONTRIBUTING.md  Cargo.toml  Leovim.py  Makefile.am  Procfile  README.md  Socketfile  bootstrap  cargo-output-hashes.nix  clippy.toml  configure.ac  dd-dashboard.nix  default.nix  deps.nix  dev-shell  flake.nix  hydra-api.yaml  hydra-module.nix  hydra-repave.py  hydra.yaml  lal.patch  maintainers-upgrade-test.nix  meson.build  meson_options.txt  nix.nix  nixos-tests.nix  package.nix  perl-packages.nix  release.nix  run-hydra.nix  shell-hook.sh  shell.nix  (+4 more)
src/: Makefile.PL  Makefile.am  build.pl  hydra.schema  hydra.sql  meson.build  runner.pl  scheduler.pl  test.sql
src/Hydra/: Makefile.PL  hydra.conf
src/builder/: Cargo.toml  build.rs
src/c/: Makefile  Makefile.am  eval-jobs.cc  hydra-eval-jobs.cc  hydra_eval_jobs.cc
src/hydra-build-step/: Makefile.am  hydra-build-step.cc  meson.build
src/hydra-eval-jobs/: Makefile.am  hydra-eval-jobs.cc  meson.build
src/hydra-evaluator/: Makefile.am  hydra-evaluator.cc  meson.build
src/hydra-queue-runner/: Makefile.am  binary-cache-store.cc  binary-cache-store.hh  build-remote.cc  build-remote.hh  build-result.cc  build-result.hh  builder.cc  counter.hh  db.hh  dispatcher.cc  hydra-build-result.hh  hydra-queue-runner.cc  local-binary-cache-store.cc  local-binary-cache-store.hh  local-binary-cache.cc  local-binary-cache.hh  lru-cache.hh  meson.build  metrics.cc  metrics.hh  nar-extractor.cc  nar-extractor.hh  pool.hh  queue-monitor.cc  s3-binary-cache-store.cc  s3-binary-cache-store.hh  state.hh  sync.hh  token-server.hh
src/hydra-queue-runner-v2/: .gitignore  Cargo.toml  clippy.toml
src/lib/: Hydra.pm  Makefile.am
src/libhydra/: db.hh  hydra-config.hh
src/queue-runner/: Cargo.toml  build.rs
src/root/: Makefile.am  admin.tt  all.tt  auth.tt  build-deps.tt  build-history-tab.tt  build-steps.tt  build.tt  change-password.tt  channel-contents.tt  clone-build.tt  clone-jobset.tt  common.tt  contextbar.tt  dashboard-my-jobs-tab.tt  dashboard-my-jobsets-tab.tt  dashboard.tt  deps.tt  edit-jobset.tt  edit-project.tt  edit-release.tt  edit-releaseset.tt  edit-view.tt  error.tt  errors.tt  eval-error.tt  evals.tt  fod-hash-mismatch.tt  index.tt  job-metrics-tab.tt  job.tt  jobset-channels-tab.tt  jobset-eval.tt  jobset-evals.tt  jobset-job-status-tab.tt  jobset-jobs-tab.tt  jobset-status-tab.tt  jobset.tt  jobstatus.tt  layout.tt  (+34 more)
src/script/: Makefile.am  hydra-backfill-ids  hydra-build  hydra-control  hydra-create  hydra-create-jobset  hydra-create-user  hydra-dev-server  hydra-eval-guile-jobs  hydra-eval-guile-jobs.in  hydra-eval-jobset  hydra-evaluator  hydra-init  hydra-notify  hydra-queue-runner  hydra-s3-backup-collect-garbage  hydra-send-stats  hydra-server  hydra-update-gc-roots  hydra-update-jobset  hydra-update-maintainers  hydra_build.pl  hydra_build.pl.in  hydra_control.sh  hydra_create.pl.in  hydra_evaluator.pl  hydra_evaluator.pl.in  hydra_init.pl  hydra_queue_runner.pl  hydra_queue_runner.pl.in  hydra_scheduler.pl  hydra_server.pl  hydra_server.pl.in  hydra_update_gc_roots.pl  hydra_update_gc_roots.pl.in  nix-prefetch-bzr  nix-prefetch-git  nix-prefetch-hg
src/sql/: Makefile  Makefile.am  base.sql  hydra.sql  meson.build  run-tempdb.sh  sort-columns.pl  update-dbix-harness.sh  update-dbix.pl  upgrade-10.sql  upgrade-12.sql  upgrade-13.sql  upgrade-14.sql  upgrade-17.sql  upgrade-19.sql  upgrade-2.sql  upgrade-23.sql  upgrade-27.sql  upgrade-30.sql  upgrade-31.sql  upgrade-32.sql  upgrade-33.sql  upgrade-34.sql  upgrade-35.sql  upgrade-36.sql  upgrade-38.sql  upgrade-39.sql  upgrade-40.sql  upgrade-41.sql  upgrade-42.sql  upgrade-43.sql  upgrade-44.sql  upgrade-46.sql  upgrade-47.sql  upgrade-49.sql  upgrade-50.sql  upgrade-51.sql  upgrade-52.sql  upgrade-53.sql  upgrade-54.sql  (+26 more)
src/ttf/: Makefile.am  README.txt
src/xsl/: Makefile.am  log2html.xsl  mark-errors.xsl
subprojects/hydra-builder/: Cargo.toml  build.rs  package.nix
subprojects/hydra-drv-daemon/: Cargo.toml  package.nix
subprojects/hydra-evaluator/: Cargo.toml  package.nix
subprojects/hydra-manual/: meson.build  package.nix
subprojects/hydra-queue-runner/: Cargo.toml  build.rs  package.nix
subprojects/hydra-tests/: api-test.t  build-products.t  meson.build  meson.options  package.nix  setup-notifications-jobset.pl  test.pl
subprojects/hydra-ws/: Cargo.toml  package.nix
subprojects/nix-perl/: meson.build  meson.options  package.nix
t/: Event.t  Makefile.am  PostgresListener.t  TaskDispatcher.t  api-test.t  build-products.t  content-addressed-without-experimental-feature.t  content-addressed.pl  content-addressed.t  default-machine-file.t  evaluate-basic.t  evaluate-dependent-jobsets.t  maintainer-search.t  maintainers-upgrade-test.nix  meson.build  perlcritic.pl  private-projects.t  s3-backup-test.config  s3-backup-test.pl  setup-notifications-jobset.pl  test.pl
t/Config/: hydra-notify.t  include.t  statsd.t
t/Controller/: metrics.t  projects.t
t/Event/: BuildFinished.t  BuildQueued.t  BuildStarted.t  StepFinished.t
t/Helper/: BuildDiff.t  Nix.t  attributeset.t  escape.t
t/Hydra/: Event.t  Math.t  PostgresListener.t  TaskDispatcher.t
t/Schema/: Users.t
t/View/: TT.t
t/content-addressed/: basic.t  without-experimental-feature.t
t/evaluator/: evaluate-basic.t  evaluate-constituents-broken.t  evaluate-constituents-gc.t  evaluate-constituents-globbing.t  evaluate-flake.t  evaluate-oom-job.t
t/input-types/: bzr-checkout.t  bzr.t  darcs.t  deepgit.t  git-rev.t  git.t  hg.t  svn-checkout.t  svn.t
t/jobs/: aggregate.nix  api-test.nix  basic.nix  (+30 more)
tests/: Makefile.am  Setup.pm  api-test.nix  api-test.pl  build-products.t  channels.nix  channels.pl  evaluate-basic.t  evaluate-dependent-jobsets.t  evaluation-tests.pl  evaluation-tests.pl.in  evaluation.t  input-types.t  maintainers-upgrade-test.nix  query-all-tables.pl  query-all-tables.pl.in  s3-backup-test.pl  set-up.pl  setup-notifications-jobset.pl  tear-down.pl
(+1309 files in other folders)
