EXTRA_DIST =					\
  $(distributable_scripts)			\
  hydra-eval-guile-jobs.in

distributable_scripts =				\
  hydra-init					\
  hydra-evaluator				\
  hydra-server					\
  hydra-update-gc-roots				\
  hydra-s3-backup-collect-garbage		\
  hydra-create-user				\
  hydra-notify					\
  nix-prefetch-git				\
  nix-prefetch-bzr				\
  nix-prefetch-hg

bin_SCRIPTS =					\
  $(distributable_scripts)			\
  hydra-eval-guile-jobs
