EXTRA_DIST =					\
  $(distributable_scripts)

distributable_scripts =				\
  hydra-backfill-ids				\
  hydra-update-maintainers \
  hydra-init					\
  hydra-eval-jobset				\
  hydra-server					\
  hydra-update-gc-roots				\
  hydra-s3-backup-collect-garbage		\
  hydra-create-user				\
  hydra-notify					\
  hydra-send-stats				\
  nix-prefetch-git				\
  nix-prefetch-bzr				\
  nix-prefetch-hg

bin_SCRIPTS =					\
  $(distributable_scripts)
