sql_files = files(
  'hydra.sql',
  'test.sql',
  'update-dbix.pl',
  'upgrade-2.sql',
  'upgrade-3.sql',
  'upgrade-4.sql',
  'upgrade-5.sql',
  'upgrade-6.sql',
  'upgrade-7.sql',
  'upgrade-8.sql',
  'upgrade-9.sql',
  'upgrade-10.sql',
  'upgrade-11.sql',
  'upgrade-12.sql',
  'upgrade-13.sql',
  'upgrade-14.sql',
  'upgrade-15.sql',
  'upgrade-16.sql',
  'upgrade-17.sql',
  'upgrade-18.sql',
  'upgrade-19.sql',
  'upgrade-20.sql',
  'upgrade-21.sql',
  'upgrade-22.sql',
  'upgrade-23.sql',
  'upgrade-24.sql',
  'upgrade-25.sql',
  'upgrade-26.sql',
  'upgrade-27.sql',
  'upgrade-28.sql',
  'upgrade-29.sql',
  'upgrade-30.sql',
  'upgrade-31.sql',
  'upgrade-32.sql',
  'upgrade-33.sql',
  'upgrade-34.sql',
  'upgrade-35.sql',
  'upgrade-36.sql',
  'upgrade-37.sql',
  'upgrade-38.sql',
  'upgrade-39.sql',
  'upgrade-40.sql',
  'upgrade-41.sql',
  'upgrade-42.sql',
  'upgrade-43.sql',
  'upgrade-44.sql',
  'upgrade-45.sql',
  'upgrade-46.sql',
  'upgrade-47.sql',
  'upgrade-48.sql',
  'upgrade-49.sql',
  'upgrade-50.sql',
  'upgrade-51.sql',
  'upgrade-52.sql',
  'upgrade-53.sql',
  'upgrade-54.sql',
  'upgrade-55.sql',
  'upgrade-56.sql',
  'upgrade-57.sql',
  'upgrade-58.sql',
  'upgrade-59.sql',
  'upgrade-60.sql',
  'upgrade-61.sql',
  'upgrade-62.sql',
  'upgrade-63.sql',
  'upgrade-64.sql',
  'upgrade-65.sql',
  'upgrade-66.sql',
  'upgrade-67.sql',
  'upgrade-68.sql',
  'upgrade-69.sql',
  'upgrade-70.sql',
  'upgrade-71.sql',
  'upgrade-72.sql',
  'upgrade-73.sql',
  'upgrade-74.sql',
  'upgrade-75.sql',
  'upgrade-76.sql',
  'upgrade-77.sql',
  'upgrade-78.sql',
  'upgrade-79.sql',
  'upgrade-80.sql',
  'upgrade-81.sql',
  'upgrade-82.sql',
  'upgrade-83.sql',
  'upgrade-84.sql',
)

install_data(sql_files, install_dir: hydra_libexecdir / 'sql')
