[package]
name                   = "hydra-builder"
version.workspace      = true
edition                = "2024"
license                = "GPL-3.0"
rust-version.workspace = true

[dependencies]
sd-notify.workspace = true
tracing.workspace   = true

anyhow.workspace      = true
clap                  = { workspace = true, features = [ "derive" ] }
fs-err                = { workspace = true, features = [ "tokio" ] }
hashbrown.workspace   = true
parking_lot.workspace = true
thiserror.workspace   = true
uuid                  = { workspace = true, features = [ "v4" ] }

async-compression      = { workspace = true, features = [ "tokio", "zstd" ] }
async-stream.workspace = true
backon.workspace       = true
bytes.workspace        = true
futures.workspace      = true
hyper-util.workspace   = true
prost.workspace        = true
tokio                  = { workspace = true, features = [ "full" ] }
tokio-stream.workspace = true
tokio-util             = { workspace = true, features = [ "io", "io-util" ] }
tonic                  = { workspace = true, features = [ "tls-webpki-roots" ] }
tonic-prost.workspace  = true
tower.workspace        = true
url.workspace          = true

serde.workspace      = true
serde_json.workspace = true

harmonia-store-core.workspace = true

gethostname.workspace = true
nix                   = { workspace = true, features = [ "fs" ] }
procfs-core.workspace = true

binary-cache  = { path = "../crates/binary-cache" }
hydra-tracing = { path = "../crates/tracing", features = [ "tonic" ] }
nix-utils     = { path = "../crates/nix-utils" }
shared        = { path = "../crates/shared" }

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[build-dependencies]
fs-err                      = { workspace = true }
sha2.workspace              = true
tonic-prost-build.workspace = true

[features]
otel = [ "hydra-tracing/otel" ]
